--- a/frame-collect-001/style.css
+++ b/frame-collect-001/style.css
@@ -1,4 +1,5 @@
-<!-- Coding By QILLASOFT | www.qillasoft.com -->
+/* Coding By QILLASOFT | www.qillasoft.com */
+
 .qillasoft-scroll-container{
   overflow: auto;
   white-space: nowrap;
