--- a/frame-collect-001/style.css
+++ b/frame-collect-001/style.css
@@ -1,7 +1,7 @@
 /* Coding By QILLASOFT | www.qillasoft.com */
 
 body {
-  background: transparent;
+  background: #263545;
 }
 .qillasoft-scroll-container{
   overflow: auto;
